# anniyan

./: .gitignore  README.md  pyproject.toml
src/anniyan/: __init__.py  checker.py  data_generator.py  domains.py  models.py
tests/: test_checker.py
